apps/loadtester/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadtester
  namespace: loadtester
spec:
  selector:
    app: loadtester
  ports:
    - port: 80
      targetPort: 8080
